fix dropdown overlap

--- a/src/scenes/Schedule/styles.scss
+++ b/src/scenes/Schedule/styles.scss
@@ -212,7 +212,7 @@
 }
 
 .display-day-holder{
-  transform: translateY(48px);
+  transform: translateY(52px);
 }
 
 .day-button-style {
@@ -222,4 +222,5 @@
   height: 60px;
   border-radius: 10px;
   background: #E28B79;
+  border: none;
 }
